<resources>
    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close</string>
    <string name="title_activity_setting" translatable="false">SettingActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="app_name" translatable="false">Bobtis</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Teacher">Teacher</string>
    <string name="Class">Class</string>
    <string name="Room">Room</string>
    <string name="Apply">Apply</string>
    <string name="Branch">Branch</string>
    <string name="Period">Period</string>
    <string name="Day">Day</string>
    <string name="Absences">Absences</string>
    <string name="VTT" translatable="false">VTT</string>
    <string name="noTest">no Test</string>
    <string name="comment">Comment</string>
    <string name="endHour">End/nhour</string>
    <string name="reason">Reason</string>
    <string name="content">Content</string>
    <string name="info">Info</string>
    <string name="homework">Homework</string>
    <string name="test">Test</string>
    <string name="Add">Add</string>
    <string name="bobtis_login" translatable="false">Bobtis Login</string>
    <string name="username" translatable="false">IAm</string>
    <string name="password">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="title">Title</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="timetable">Timetable</string>
    <string name="my_timetable">My Timetable</string>
    <string name="my_homework">My Homework</string>
    <string name="my_Absences">My Absences</string>
    <string name="class_timtables">Class timetables</string>
    <string name="room_Timetables">Room timetables</string>
    <string name="teacher_Timetables">Teacher timetables</string>
</resources>